# JY-Companion

./: .editorconfig  .gitignore  Makefile  README.md
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: d3422e549143_initial_schema.py
backend/app/: main.py
backend/app/agents/: academic_agent.py  base_agent.py  career_agent.py  classroom_agent.py  creative_agent.py  default_agent.py  emotional_agent.py  health_agent.py
backend/app/config/: logging_config.py  settings.py
backend/app/core/: database.py  dependencies.py  encryption.py  exceptions.py  middleware.py  security.py
backend/app/hub/: agent_registry.py  intent_classifier.py  orchestrator.py
backend/app/integrations/: school_system.py  sso_provider.py
backend/app/models/: base.py  career.py  classroom.py  conversation.py  emotion.py  health.py  learning.py  persona.py  user.py
backend/app/persona/: __init__.py  memory_graph.py  persona_manager.py  style_controller.py
backend/app/schemas/: academic.py  admin.py  career.py  chat.py  classroom.py  creative.py  emotional.py  health.py  persona.py  user.py  voice.py
backend/app/services/: academic_service.py  asr_client.py  auth_service.py  cache.py  career_service.py  chat_service.py  classroom_service.py  content_safety.py  creative_service.py  crisis_alert.py  data_masking.py  embedding_service.py  emotion_detector.py  emotion_expression_mapper.py  emotional_service.py  health_service.py  intervention_strategies.py  llm_client.py  milvus_client.py  minio_client.py  neo4j_client.py  ocr_client.py  prompt_manager.py  rag_pipeline.py  tts_client.py  voice_pipeline.py
backend/tests/: conftest.py
backend/tests/unit/: test_health.py  (+24 more)
(+342 files in other folders)
