[project]
name = "jy-companion-backend"
version = "0.1.0"
description = "星澜中学 AI 智能学伴平台 - 后端服务"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.14.0",
    # Auth
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    "authlib>=1.3.0",
    # Validation & Settings
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    # Redis
    "redis[hiredis]>=5.2.0",
    # Task queue
    "celery[redis]>=5.4.0",
    # HTTP client
    "httpx>=0.28.0",
    # Rate limiting
    "slowapi>=0.1.9",
    # Logging
    "structlog>=24.4.0",
    # Monitoring
    "prometheus-fastapi-instrumentator>=7.0.0",
    # Vector DB
    "pymilvus>=2.4.0",
    # Graph DB
    "neo4j>=5.25.0",
    # Utilities
    "python-multipart>=0.0.12",
    "orjson>=3.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "factory-boy>=3.3.0",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]
ignore = ["E501", "B008"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
